--- a/app/views/asset_classes/show.html.erb
+++ b/app/views/asset_classes/show.html.erb
@@ -1,71 +1,40 @@
 <div>
   <div>
-    <h1>
-      Asset class #<%= @the_asset_class.id %> details
-    </h1>
+    <h3><%= @the_asset_class.name %> Details </h3>
 
     <div>
-      <div>
-        <a href="/asset_classes">
-          Go back
-        </a>
-      </div>
+      <div><a href="/asset_classes">Go back</a> </div>
 
-      <div>
-        <a href="/delete_asset_class/<%= @the_asset_class.id %>">
-          Delete asset class
-        </a>
-      </div>
     </div>
-
-    <dl>
-      <dt>
-        Name
-      </dt>
-      <dd>
-        <%= @the_asset_class.name %>
-      </dd>
-
-      <dt>
-        Created at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_asset_class.created_at) %> ago
-      </dd>
-
-      <dt>
-        Updated at
-      </dt>
-      <dd>
-        <%= time_ago_in_words(@the_asset_class.updated_at) %> ago
-      </dd>
-    </dl>
   </div>
 </div>
 
 <hr>
 
 
-<div>
-  <div>
-    <h2>
-      Edit asset class
-    </h2>
-
+  <div class="row">
+    <div class="col-4">
+    <h3>Edit Asset Class</h3>
     <form action="/modify_asset_class/<%= @the_asset_class.id %>"  method="post" >
-      <div>
-        <label for="name_box">
-          Name
-        </label>
-
-        <input type="text" id="name_box" name="query_name" value="<%= @the_asset_class.name %>">
+      <div class="form-group">
+        <label for="name_box">Name</label>
+        <input class="form-control" type="text" id="name_box" name="query_name" value="<%= @the_asset_class.name %>">
       </div>
-
-      <button>
-        Update asset class
-      </button>
+       <div class="form-group">
+        <label for="type_box">Broad Asset Class</label>
+        <input class="form-control" type="text" id="type_box" name="query_broad_type" value="<%= @the_asset_class.broad_type %>">
+      </div>
+      <div class="form-group">
+        <label for="subtype_box">Asset Class</label>
+        <input class="form-control" type="text" id="subtype_box" name="query_subtype" value="<%= @the_asset_class.subtype %>">
+      </div>
+      <div class="form-group">
+        <label for="goal_box">Goal</label>
+        <input class="form-control" type="text" id="goal_box" name="query_goal" value="<%= @the_asset_class.goal %>">
+      </div>
+      <input type="submit" class="btn btn-success" value = "Update Asset Class">
     </form>
   </div>
 </div>
-
 <hr>
+      <div ><a class="text-danger" href="/delete_asset_class/<%= @the_asset_class.id %>">Delete asset class</a></div>
