--- a/app/views/cma_inputs/index.html.erb
+++ b/app/views/cma_inputs/index.html.erb
@@ -1,181 +1,59 @@
+
 <div>
   <div>
-    <h1>
-      List of all cma inputs
-    </h1>
+    <h3> Edit Inputs: <%= @the_cma.name%> </h3>
   </div>
 </div>
 
-<hr>
+
 
 <div>
   <div>
-    <h2>
-      Add a new cma input
-    </h2>
+    
 
-    <form action="/insert_cma_input" method="post">
-      <div>
-        <label for="cma_id_box">
-          Cma
-        </label>
-
-        <input type="text" id="cma_id_box" name="query_cma_id">
-      </div>
-
-      <div>
-        <label for="exp_ret_box">
-          Exp ret
-        </label>
-
-        <input type="text" id="exp_ret_box" name="query_exp_ret">
-      </div>
-
-      <div>
-        <label for="std_dev_box">
-          Std dev
-        </label>
-
-        <input type="text" id="std_dev_box" name="query_std_dev">
-      </div>
-
-      <div>
-        <label for="skew_box">
-          Skew
-        </label>
-
-        <input type="text" id="skew_box" name="query_skew">
-      </div>
-
-      <div>
-        <label for="kurt_box">
-          Kurt
-        </label>
-
-        <input type="text" id="kurt_box" name="query_kurt">
-      </div>
-
-      <div>
-        <label for="yield_box">
-          Yield
-        </label>
-
-        <input type="text" id="yield_box" name="query_yield">
-      </div>
-
-      <div>
-        <label for="asset_class_id_box">
-          Asset class
-        </label>
-
-        <input type="text" id="asset_class_id_box" name="query_asset_class_id">
-      </div>
-
-      <button>
-        Create cma input
-      </button>
-    </form>
-  </div>
-</div>
-
-<hr>
-<div>
-  <div>
-    <table>
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Cma
-        </th>
-
-        <th>
-          Exp ret
-        </th>
-
-        <th>
-          Std dev
-        </th>
-
-        <th>
-          Skew
-        </th>
-
-        <th>
-          Kurt
-        </th>
-
-        <th>
-          Yield
-        </th>
-
-        <th>
-          Asset class
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_cma_inputs.each do |a_cma_input| %>
-      <tr>
-        <td>
-          <%= a_cma_input.id %>
-        </td>
-
-        <td>
-          <%= a_cma_input.cma_id %>
-        </td>
-
-        <td>
-          <%= a_cma_input.exp_ret %>
-        </td>
-
-        <td>
-          <%= a_cma_input.std_dev %>
-        </td>
-
-        <td>
-          <%= a_cma_input.skew %>
-        </td>
-
-        <td>
-          <%= a_cma_input.kurt %>
-        </td>
-
-        <td>
-          <%= a_cma_input.yield %>
-        </td>
-
-        <td>
-          <%= a_cma_input.asset_class_id %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(a_cma_input.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(a_cma_input.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/cma_inputs/<%= a_cma_input.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
+ <table class="table table-hover">
+ <form action="/modify_cma_input" method="post">
+   
+   <thead>
+   <input type="submit" class="btn btn-success btn-lg" value =  "Update CMAs" >
+    <tr>
+      <th scope="col">Asset Class</th>
+      <th scope="col">Expected Return (Arith)</th>
+      <th scope="col">Standard Deviation</th>
+      <th scope="col">Skewness</th>
+      <th scope="col">Kurtosis</th>
+      <th scope="col">Yield</th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+   <tbody>
+   <% @asset_class.each do |asset_class| %>
+    <tr class="table-light">
+      <th scope="row"> <%= asset_class.name %> </th>
+      <td> <input class="form-control" type="number" min="0" max="1" step="0.0001" id="exp_ret_box" name="query_exp_ret[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].exp_ret%> > </td>
+      <td> <input class="form-control" type="number" min="0" max="1" step="0.0001" id="std_dev_box" name="query_std_dev[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].std_dev%>></td>
+      <td> <input class="form-control" type="number" min="-100" max="100" step="0.01" id="skew_box" name="query_skew[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].skew%>></td>
+      <td> <input class="form-control" type="number" min="0" max="100" step="0.01" id="kurt_box" name="query_kurt[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].kurt%>> </td>
+      <td> <input class="form-control" type="number" min="0" max="1" step="0.005" id="yield_box" name="query_yield[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].yield%>> </td>
+      <td> <input class="form-control"  type="hidden" id="asset_class_id_box" name="query_asset_class_id[]" value = <%= asset_class.id %>></td>
+      <td> <input class="form-control"  type="hidden" id="cma_id_box" name="query_cma_id[]" value = <%= @the_cma.id %>></td>
+      <td> <input class="form-control"  type="hidden" id="cma_id_box" name="query_cma_input_id[]" value = <%= @list_of_cma_inputs.where(:cma_id => @the_cma.id).where(:asset_class => asset_class.id)[0].id%>></td>
+    </tr>
+        <%# <label for="cma_id_box"> CMA ID </label>
+        <%# <label for="asset_class_id_box"> Asset class ID </label> %>
+        <%# <label for="exp_ret_box"> Expected Return (Arith) </label>
+        <label for="std_dev_box"> Standard Dev </label>
+        <label for="skew_box"> Skewness</label>
+        <label for="kurt_box"> Kurtosis</label>
+        <label for="yield_box"> Yield</label> %> 
+        
       <% end %>
-    </table>
+    </tbody>
+  </table>
+     <input type="submit" class="btn btn-success btn-lg" value =  "Update CMAs" >
+    </form>
   </div>
 </div>
 
