--- a/app/views/frontier_inputs/index.html.erb
+++ b/app/views/frontier_inputs/index.html.erb
@@ -10,14 +10,11 @@
 
 <div>
   <div>
-    <h2>
-      Add a new frontier input
-    </h2>
+    <h2> Add a new frontier input</h2>
 
     <form action="/insert_frontier_input" method="post">
       <div>
-        <label for="asset_class_id_box">
-          Asset class
+        <label for="asset_class_id_box">   Asset class
         </label>
 
         <input type="text" id="asset_class_id_box" name="query_asset_class_id">
