--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
   <head>
     <title>FinalProject</title>
     <%= csrf_meta_tags %>
+     
 
+     
     <!-- Expand the number of characters we can use in the document beyond basic ASCII 🎉 -->
     <meta charset="utf-8">
 
@@ -12,10 +14,88 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
+    <meta charset="utf-8">
 
+    <!-- Connect Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/flatly/bootstrap.min.css">
+
+    <!-- Connect Bootstrap JavaScript and its dependencies -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Connect Font Awesome -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"></script>
+
+    <!-- Make it responsive to small screens -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   
+     
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.1/dist/Chart.min.js"></script>
+    
+     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track": "reload" %>
+        <%= javascript_tag 'application', 'data-turbolinks-track': 'reload' %>
+      <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
   </head>
 
   <body>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">MPJ CO</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/asset_classes">Asset Class Overview</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/cmas">Capital Market Assumptions</a>
+      </li>
+      
+      <li class="nav-item">
+        <a class="nav-link" href="/correlations">Correlation Assumptions</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/frontiers">Efficient Frontier Analysis</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/forecasts">Forecast Analysis</a>
+      </li>
+      
+     
+      <li class="nav-item">
+        <a class="nav-link" href="/user_sign_in">Sign In</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/user_sign_out">Sign Out</a>
+      </li>
+            <li class="nav-item">
+        <a class="nav-link" href="/user_sign_up">Sign Up</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+    
+    <p style = "color: green"><%= notice%></p>
+    <p style = "color: red"><%= alert%></p>
+
+    
+
+
+
     <%= yield %>
   </body>
+
+  
 </html>
